Add input node wiring for vxlan4-gpe-input, vxlan6-gpe-input, gre
Change-Id: Ie7b132924f36a0522e956a80d3f6f2b5fcca84f0
Signed-off-by: Keith Burns (alagalah) <alagalah@gmail.com>

--- a/nsh-plugin/Makefile.am
+++ b/nsh-plugin/Makefile.am
@@ -42,9 +42,9 @@ nsh_test_plugin_la_LDFLAGS = -module
 install-data-hook:
 	mkdir $(prefix)/lib/vpp_plugins || true
 	mkdir $(prefix)/lib/vpp_api_test_plugins || true
-	cp $(prefix)/lib/nsh_plugin.so.*.*.* $(prefix)/lib/vpp_plugins
+	cp $(prefix)/lib/nsh_plugin.so.*.*.* $(prefix)/lib/vpp_plugins/nsh_plugin.so
 	cp $(prefix)/lib/nsh_test_plugin.so.*.*.* \
-		$(prefix)/lib/vpp_api_test_plugins
+		$(prefix)/lib/vpp_api_test_plugins/nsh_test_plugin.so
 	rm -f $(prefix)/lib/nsh_plugin.*
 	rm -f $(prefix)/lib/nsh_test_plugin.*
 
