--- a/nsh-plugin/java/pom.xml
+++ b/nsh-plugin/java/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>io.fd.vpp</groupId>
+  <groupId>io.fd.nsh_sfc</groupId>
   <artifactId>nsh-sfc</artifactId>
   <version>16.09-SNAPSHOT</version>
   <packaging>jar</packaging>
