nsh-plugin rpm packaging
Change-Id: I5ccacfa9e09c88f84ac5b5cb303ba4d170f3743d
Signed-off-by: Ed Warnicke <eaw@cisco.com>
Signed-off-by: Ed Warnicke <hagbard@gmail.com>

--- a/nsh-plugin/Makefile.am
+++ b/nsh-plugin/Makefile.am
@@ -53,3 +53,7 @@ install-data-hook:
 	rm -f $(prefix)/lib/nsh_plugin.*
 	rm -f $(prefix)/lib/nsh_test_plugin.*
 
+pkg-rpm: all install
+	cd $(srcdir)/packaging/rpm; \
+	rpmbuild -bb --define "_topdir $$PWD" \
+		--define "_plugin_prefix ${prefix}" vpp-nsh-plugin.spec
