Fix .gitignore file to actually work
Change-Id: Ica8ac231d0084fd5d5f15e3473e1dc82e6fdbe7a
Signed-off-by: Ed Warnicke <hagbard@gmail.com>

--- a/nsh-plugin/.gitignore
+++ b/nsh-plugin/.gitignore
@@ -1,16 +1,17 @@
 # Build artifacts
-aclocal.m4 
+aclocal.m4
 autom4te.cache/
-build/ 
-compile 
-config.guess 
+build/
+compile
+config.guess
 config.sub
-configure 
-depcomp 
-install-sh 
-ltmain.sh 
-Makefile.in 
+configure
+depcomp
+install-sh
+ltmain.sh
+libtool.m4
+Makefile.in
 missing
-
 *~
 cscope*
+
