Fix to make "make dist" work
Change-Id: I5f944198aa3b2cb55855157d8087d4bef6067106
Signed-off-by: Ed Warnicke <hagbard@gmail.com>

--- a/nsh-plugin/Makefile.am
+++ b/nsh-plugin/Makefile.am
@@ -22,7 +22,7 @@ CPPFLAGS += -DDEBUG -g
 
 lib_LTLIBRARIES = nsh_plugin.la nsh_test_plugin.la
 nsh_plugin_la_SOURCES = nsh/nsh.c  \
-	nsh/nsh_plugin.api.h 
+	vpp-api/nsh.api.h 
 nsh_plugin_la_LDFLAGS = -module
 
 BUILT_SOURCES = vpp-api/nsh.api.h
@@ -40,7 +40,7 @@ nobase_include_HEADERS =			\
   vpp-api/nsh.api.h
 
 nsh_test_plugin_la_SOURCES = \
-  nsh/nsh_test.c nsh/nsh_plugin.api.h
+  nsh/nsh_test.c vpp-api/nsh.api.h
 nsh_test_plugin_la_LDFLAGS = -module
 
 install-data-hook:
