--- a/nsh-plugin/java/jvpp/pom.xml
+++ b/nsh-plugin/java/jvpp/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>io.fd.vpp</groupId>
+  <groupId>io.fd.nsh_sfc</groupId>
   <artifactId>nsh-sfc</artifactId>
-  <version>16.09-SNAPSHOT</version>
+  <version>16.12-SNAPSHOT</version>
   <packaging>jar</packaging>
  
   <name>nsh-sfc</name>
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>io.fd.vpp</groupId>
       <artifactId>jvpp-registry</artifactId>
-      <version>16.09-SNAPSHOT</version>
+      <version>16.12-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
