VPP-378: update jvpp package names
Depends on vpp change:
https://gerrit.fd.io/r/#/c/3178

Related Honeycomb change:
https://gerrit.fd.io/r/#/c/3182

Change-Id: If8aa43a646ee64fb98b7d8b4398fbdf221c7dc25
Signed-off-by: Marek Gradzki <mgradzki@cisco.com>

--- a/nsh-plugin/java/jvpp/pom.xml
+++ b/nsh-plugin/java/jvpp/pom.xml
@@ -49,7 +49,7 @@
                        <arg value="${runtime_classpath}"/>
                        <arg value="-d"/>
                        <arg value="${basedir}"/>
-                       <arg value="org.openvpp.jvpp.nsh.JVppNshImpl"/>
+                       <arg value="io.fd.vpp.jvpp.nsh.JVppNshImpl"/>
                    </exec>
                 </target>
             </configuration>
