--- a/nsh-plugin/java/jvpp/pom.xml
+++ b/nsh-plugin/java/jvpp/pom.xml
@@ -4,7 +4,7 @@
  
   <groupId>io.fd.nsh_sfc</groupId>
   <artifactId>nsh-sfc</artifactId>
-  <version>17.01</version>
+  <version>17.01-SNAPSHOT</version>
   <packaging>jar</packaging>
  
   <name>nsh-sfc</name>
