Add .gitignore file not to track some temp files
Change-Id: Ife72e2bed5c215f63cb17ef4dd318f45598aa4ee
Signed-off-by: Hongjun Ni <hongjun.ni@intel.com>

--- a/nsh-plugin/.gitignore
+++ b/nsh-plugin/.gitignore
@@ -14,3 +14,10 @@ missing
 *~
 cscope*
 
+java/m4/libtool.m4
+java/m4/ltoptions.m4
+java/m4/ltsugar.m4
+java/m4/ltversion.m4
+java/m4/lt~obsolete.m4
+packaging/deb/debian/debhelper-build-stamp
+
