Add support for iOAM (sub-TLV) over NSH-MD2. iOAM trace records are carried as MD2 TLV data.
Change-Id: Id6fe6c961aa3879df5ae476f13b0e39bcc6c0dfe
Signed-off-by: Vengada <venggovi@cisco.com>

--- a/nsh-plugin/Makefile.am
+++ b/nsh-plugin/Makefile.am
@@ -22,7 +22,12 @@ CPPFLAGS += -DDEBUG -g
 
 lib_LTLIBRARIES = nsh_plugin.la nsh_test_plugin.la
 nsh_plugin_la_SOURCES = nsh/nsh.c  \
-	vpp-api/nsh.api.h
+	vpp-api/nsh.api.h \
+	nsh-md2-ioam/nsh_md2_ioam.c \
+	nsh-md2-ioam/nsh_md2_ioam_trace.c \
+	nsh-md2-ioam/md2_ioam_transit.c \
+	nsh-md2-ioam/nsh_md2_ioam_api.c
+
 nsh_plugin_la_LDFLAGS = -module
 
 BUILT_SOURCES = vpp-api/nsh.api.h
