Changes for supoprting iOAM/ NSH export. Add a separate node for POP only handling to support iOAM export dynamic node.
Change-Id: I411ee93ea3ec34ed24c18c1ba4b5dc1c9533e483
Signed-off-by: Vengada <venggovi@cisco.com>

--- a/nsh-plugin/Makefile.am
+++ b/nsh-plugin/Makefile.am
@@ -22,11 +22,15 @@ CPPFLAGS += -DDEBUG -g
 
 lib_LTLIBRARIES = nsh_plugin.la nsh_test_plugin.la
 nsh_plugin_la_SOURCES = nsh/nsh.c  \
+	nsh/nsh_pop.c \
 	vpp-api/nsh.api.h \
 	nsh-md2-ioam/nsh_md2_ioam.c \
 	nsh-md2-ioam/nsh_md2_ioam_trace.c \
 	nsh-md2-ioam/md2_ioam_transit.c \
-	nsh-md2-ioam/nsh_md2_ioam_api.c
+	nsh-md2-ioam/nsh_md2_ioam_api.c \
+	nsh-md2-ioam/export-nsh-md2-ioam/nsh_md2_ioam_export.c \
+	nsh-md2-ioam/export-nsh-md2-ioam/nsh_md2_ioam_export_thread.c \
+	nsh-md2-ioam/export-nsh-md2-ioam/nsh_md2_ioam_node.c
 
 nsh_plugin_la_LDFLAGS = -module
 
