--- a/nsh-plugin/java/jvpp/pom.xml
+++ b/nsh-plugin/java/jvpp/pom.xml
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>io.fd.vpp</groupId>
       <artifactId>jvpp-registry</artifactId>
-      <version>17.07-SNAPSHOT</version>
+      <version>17.07</version>
     </dependency>
   </dependencies>
 
