Fix compiling issue led by vppapigen rework
Change-Id: I2e7cc0f0302476e64f4aae328bc56e96cf6150b0
Signed-off-by: Hongjun Ni <hongjun.ni@intel.com>
(cherry picked from commit 2fd1760193f985fb3db861fae21219b6a83d090c)

--- a/nsh-plugin/Makefile.am
+++ b/nsh-plugin/Makefile.am
@@ -42,7 +42,7 @@ SUFFIXES = .api.h .api
 vpp-api/%.api.h: nsh/%.api
 	mkdir -p `dirname $@` ; \
 	$(CC) $(CPPFLAGS) -E -P -C -x c $^ \
-	| vppapigen --input - --output $@ --show-name $@
+	| vppapigen --includedir $(top_srcdir) --input $< --output $@
 
 nobase_include_HEADERS =			\
   vpp-api/nsh_all_api_h.h			\
