--- a/nsh-plugin/java/pom.xml
+++ b/nsh-plugin/java/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.fd.nsh_sfc</groupId>
   <artifactId>nsh-sfc</artifactId>
-  <version>18.04-RC1</version>
+  <version>18.04</version>
   <packaging>jar</packaging>
 
   <name>nsh-sfc</name>
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>io.fd.vpp</groupId>
       <artifactId>jvpp-registry</artifactId>
-      <version>18.04-SNAPSHOT</version>
+      <version>18.04</version>
     </dependency>
   </dependencies>
 
