--- a/nsh-plugin/java/pom.xml
+++ b/nsh-plugin/java/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.fd.nsh_sfc</groupId>
   <artifactId>nsh-sfc</artifactId>
-  <version>18.07-SNAPSHOT</version>
+  <version>18.07-RC1</version>
   <packaging>jar</packaging>
 
   <name>nsh-sfc</name>
